

==============================
Release 5.*
==============================
2014-06-07    Add "_Don't show this message again" checkbox possibility to the WPFMessageBox
2014-06-04    Adjust ButtonsPanel in WPFMessageBox to have dynamic longer buttons if the text is adjusted
2014-06-04    If there are many buttons in the WPFMessageBoxOptions which became cut, the MaxWidth will be adjusted
2014-06-04    Add some window options to the WPFMessageBoxOptions
2014-06-04    Change horizontal title alignments default in the TitledItemsControl to left (like written in the documentation)
2014-06-04    Add EnumerationComboBox
2014-06-03    Add YesToAll and NoToAll button possibilities to the WPFMessageBox
2014-06-02    Add KeyboardWatcher to observe keyboard events (keyboard hooks) even the app has not the focus
2014-05-25    Add CancelTryAgainContinue to WPFMessageBox
2014-05-25    Add optional help button to the WPFMessageBox
2014-05-25    Change messagebox text from TextBlock to Label to have it catchable by coded UI
2014-05-25    Add missing automation ID for the messagebox text and icon
2014-05-25    Load message box strings from the system and add possibility to define new from outside
2014-05-24    Add changeable copy formatter to the WPFMessageBox
2014-05-24    Add possibility to add and change the system menu and icon in the WPFMessageBox
2014-05-24    Add custom text block control to the WPFMessageBox to show the message
2014-05-24    Disable system menu in WPFMessageBox
2014-05-24    Add possibility to disable the close button or system menu in the WindowTitleBarBehavior
2014-05-24    Add WPFMessageBox with first functionalities
2014-05-19    Add DockingPane
2014-05-09    Add possibility to check and uncheck a NumberBox
2014-05-09    Add possibility to have a reset button in the NumberBox
2014-05-09    Merge NumericUpDown into the NumberBox
2014-05-08    Add NullToVisibilityConverter
2014-05-08    Add NullToBooleanConverter