@@ -178,6 +178,7 @@
     </Style>
 
     <Style TargetType="{x:Type Controls:WPFMessageBoxButtonControl}" BasedOn="{StaticResource {x:Type Button}}">
+        <Setter Property="Focusable" Value="True" />
         <Setter Property="Height" Value="26" />
         <Setter Property="MinWidth" Value="88" />
         <Setter Property="Margin" Value="0,0,10,0" />
@@ -185,6 +186,7 @@
     </Style>
 
     <Style TargetType="{x:Type Controls:WPFMessageBoxTextControl}" BasedOn="{StaticResource {x:Type Label}}">
+        <Setter Property="Focusable" Value="False" />
         <Setter Property="AutomationProperties.AutomationId" Value="65535" />
         <Setter Property="Margin" Value="10,25,40,25" />
         <Setter Property="VerticalAlignment" Value="Center" />
@@ -198,9 +200,9 @@
     </Style>
 
     <Style TargetType="{x:Type Controls:WPFMessageBoxCheckBoxControl}" BasedOn="{StaticResource {x:Type CheckBox}}">
+        <Setter Property="Focusable" Value="False" />
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="Margin" Value="10,0" />
-        <Setter Property="Focusable" Value="False" />
     </Style>
 
 </ResourceDictionary>
